--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title id="title">Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body id = "body">
     <div class="parent">
         <div class="d1">1</div>
-        <div class="d0">t</div>
+       <div class="d0"><label></label></div>
         <div class="d2">2</div>
     </div>
     <script src="script.js"></script>
