--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body id = "body">
-    <div class="parent">
-        <div class="d1">1</div>
-       <div class="d0"><label></label></div>
-        <div class="d2">2</div>
+    <div id="parent">
+        <div  id="d1">1</div>
+       <div  id="d0"><label></label></div>
+        <div  id="d2">2</div>
     </div>
     <script src="script.js"></script>
 </body>
