--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html >
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title id="title">Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
+    
+    <title>Document</title>
 </head>
-<body id = "body">
-    <div id="parent">
-        <div  id="d1">1</div>
-       <div  id="d0"><label></label></div>
-        <div  id="d2">2</div>
+<body id="body">
+    <div id="container">
+        <div id="header"></div>
+        <div id="SplitterHeader"></div>
+        <div id="center"></div>
+        <div id="SplitterFooter"></div>
+        <div id="footer"></div>
+        
     </div>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
